--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="auto-scroll-from-right scroll-list">
           <li class="pic"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/slider1.JPG?raw=true" alt="JTマーヴェラス"></li>
           <li class="pic"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/slider2.jpg?raw=true" alt="JTマーヴェラス"></li>
-          <li class="pic"><img src="assets/images/slider3.jpg" alt="JTマーヴェラス"></li>
+          <li class="pic"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/slider3.jpg?raw=true" alt="JTマーヴェラス"></li>
       </ul>
       <ul class="auto-scroll-from-right scroll-list">
           <li class="pic"><img src="assets/images/slider1.jpg" alt="JTマーヴェラス"></li>
