--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="main-bottom">
         <h2>ピックアップ ↓</h2>
         <div ref="target" class="img">
-          <a href="zenja-figskate92.html"><img src="assets/images/main-b1.jpg" alt="第92回全日本フィギアスケート選手権"></a>
+          <a href="zenja-figskate92.html"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/main-b1.jpg?raw=true" alt="第92回全日本フィギアスケート選手権"></a>
       </div>
       <div ref="target" class="img">
         <a href="jtmave23.html"><img src="assets/images/main-b2.jpg" alt="JTマーヴェラス 2023.11.25 vs マンマーレ山形"></a>
