--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="zenja-figskate92.html"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/main-b1.jpg?raw=true" alt="第92回全日本フィギアスケート選手権"></a>
       </div>
       <div ref="target" class="img">
-        <a href="jtmave23.html"><img src="assets/images/main-b2.jpg" alt="JTマーヴェラス 2023.11.25 vs マンマーレ山形"></a>
+        <a href="jtmave23.html"><img src="https://github.com/heytroys/yotarosports/blob/main/assets/images/main-b2.jpg?raw=true" alt="JTマーヴェラス 2023.11.25 vs マンマーレ山形"></a>
     </div>
     </section>
     <!-- about -->
