--- a/jtmave23.html
+++ b/jtmave23.html
@@ -21,7 +21,7 @@
         <h3>2023.11.25</h3>
         <h4>JTマーヴェラス vs マンマーレ山形 (3-0) 加古川市立総合体育館</h4>
             <div class="img">
-                <img src="event-images/jtmave23/kakogawa1/1.jpg" alt="JTマーヴェラス vs マンマーレ山形">
+                <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/kakogawa1/1.JPG?raw=true" alt="JTマーヴェラス vs マンマーレ山形">
             </div>
             <div class="img">
                 <img src="event-images/jtmave23/kakogawa1/2.jpg" alt="JTマーヴェラス vs マンマーレ山形">
