--- a/jtmave23.html
+++ b/jtmave23.html
@@ -30,7 +30,7 @@
                 <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/kakogawa1/3.JPG?raw=true" alt="JTマーヴェラス vs マンマーレ山形">
             </div>
             <div class="img">
-                <img src="event-images/jtmave23/kakogawa1/4.jpg" alt="JTマーヴェラス vs マンマーレ山形">
+                <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/kakogawa1/4.JPG?raw=true" alt="JTマーヴェラス vs マンマーレ山形">
             </div>
             <div class="img">
                 <img src="event-images/jtmave23/kakogawa1/5.jpg" alt="JTマーヴェラス vs マンマーレ山形">
