--- a/jtmave23.html
+++ b/jtmave23.html
@@ -42,7 +42,7 @@
         <h3>2023.11.11</h3>
         <h4>JTマーヴェラス vs KUROBEアクアフェアリーズ (3-0) おおきにアリーナ舞洲</h4>
             <div class="img">
-                <img src="event-images/jtmave23/ookini1/1.jpg" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
+                <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/ookini1/1.JPG?raw=true" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
             </div>
             <div class="img">
                 <img src="event-images/jtmave23/ookini1/2.jpg" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
