--- a/jtmave23.html
+++ b/jtmave23.html
@@ -54,7 +54,7 @@
                 <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/ookini1/4.JPG?raw=true" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
             </div>
             <div class="img">
-                <img src="event-images/jtmave23/ookini1/5.jpg" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
+                <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/jtmave23/ookini1/5.JPG?raw=true" alt="JTマーヴェラス vs KUROBEアクアフェアリーズ">
             </div>
         </div>
       </section>
