--- a/prof.html
+++ b/prof.html
@@ -19,7 +19,7 @@
           <div class="profile">
         <h2>プロフィール</h2>
         <div class="prof-img">
-          <img src="event-images/prof/main1.jpg" alt="">
+          <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/prof/main1.jpg?raw=true" alt="プロフィール">
         </div>
         <ul class="introd-list">
           <li>出身<br>  ー  京都府京都市</li>
