--- a/zenja-figskate92.html
+++ b/zenja-figskate92.html
@@ -20,7 +20,7 @@
         <h2>第92回全日本フィギアスケート選手権</h2>
         <h3>2023.12.20 ~ 2023.12.24</h3>
             <div class="img">
-                <img src="event-images/skate23/zen-nihon/1.jpg" alt="第92回全日本フィギアスケート選手権">
+                <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/skate23/zen-nihon/1.jpg?raw=true" alt="第92回全日本フィギアスケート選手権">
             </div>
             <h3>男女シングル</h3>
             <h4>女子最終結果</h4>
