--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <p>スポーツ会場で撮った写真や、情報をあげていくサイトです。</p>
     </section>
     <!-- spo-news -->
-    <section ref="target" id="spo-news" class="ato">
+    <section ref="target" id="spo-news" class="mae">
       <h2>ニュース</h2>
       <div class="news-content">
       <p>2023.12.23</p>
