--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     </div>
     </section>
     <!-- about -->
-    <section id="about">
+    <section ref="target" id="about" class="mae">
       <h2>このサイトについて</h2>
       <p>スポーツ会場で撮った写真や、情報をあげていくサイトです。</p>
     </section>
     <!-- spo-news -->
-    <section id="spo-news">
+    <section ref="target" id="spo-news" class="mae">
       <h2>ニュース</h2>
       <div class="news-content">
       <p>2023.12.23</p>
