--- a/zenja-figskate92.html
+++ b/zenja-figskate92.html
@@ -17,11 +17,11 @@
     <main>
       <section id="zenni-figskate23">
         <div class="animate__animated animate__fadeIn">
-        <h2>第92回<br>全日本フィギアスケート選手権<br>総合結果</h2>
-        <h3>2023.12.20 ~ 2023.12.24</h3>
+        <h2>第92回全日本フィギアスケート<br>総合結果</h2>
             <div class="img">
                 <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/skate23/zen-nihon/12.jpg?raw=true" alt="第92回全日本フィギアスケート選手権">
             </div>
+            <h3>2023.12.20 ~ 2023.12.24</h3>
             <h3>男女シングル</h3>
             <h4>女子最終結果</h4>
             <table class="skate-women">
