--- a/index.html
+++ b/index.html
@@ -47,20 +47,32 @@
     <section id="spo-news">
       <h2>情報</h2>
       <div class="news-content">
+      <p>2023.12.31</p>
+      <p>鍵山優真、フィギア世界選手権代表に選出!</p>
+      </div>
+      <div class="news-content">
+      <p>2023.12.31</p>
+      <p>吉田陽菜、フィギア世界選手権代表に初選出!</p>
+      </div>
+      <div class="news-content">
       <p>2023.12.23</p>
-      <p>鍵山優真が、全日本フィギアで銀メダル!宇野昌磨が優勝!</p>
-      </div>
-      <div class="news-content">
-      <p>2023.12.09</p>
-      <p>鍵山優真、初のグランプリファイナルで銅メダル! 宇野昌磨は銀メダル!</p>
-      </div>
-      <div class="news-content">
-      <p>2023.12.09</p>
-      <p>吉田陽菜、初のグランプリファイナルで銅メダル!坂本花織が優勝!</p>
+      <p>鍵山優真、全日本フィギアで銀メダル!宇野昌磨が優勝!</p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
       </button>
+        <div class="collapse" id="collapseExample">
+        <div class="card card-body news-content">
+          <p>2023.12.09</p>
+        <p>鍵山優真、初のグランプリファイナルで銅メダル! 宇野昌磨は銀メダル!</p>
+        </div>
+      </div>
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body news-content">
+          <p>2023.12.09</p>
+        <p>吉田陽菜、初のグランプリファイナルで銅メダル!坂本花織が優勝!</p>
+        </div>
+      </div>
       <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
           <p>2023.12.02</p>
