--- a/ishiidaichi.html
+++ b/ishiidaichi.html
@@ -19,7 +19,7 @@
     <div class="animate__animated animate__fadeIn">
     <h2>阪神タイガース・石井大智</h2>
     <div class="atl-img">
-      <img src="event-images/athlete/ishidai.jpg" alt="阪神・石井大智">
+      <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/athlete/ishidai.jpg?raw=true" alt="阪神・石井大智">
     </div>
     <p>画像参照: https://www.sponichi.co.jp</p>
     <div class="atl-life">
