--- a/index.html
+++ b/index.html
@@ -45,46 +45,28 @@
     </section>
     <!-- spo-news -->
     <section id="spo-news">
-      <h2>情報</h2>
+      <h2>アスリート</h2>
       <div class="news-content">
-      <p>2023.12.31</p>
-      <p>鍵山優真、フィギア世界選手権代表に選出!</p>
+      <p>プロ野球</p>
+      <p>阪神タイガース・石井大智</p>
       </div>
       <div class="news-content">
-      <p>2023.12.31</p>
-      <p>吉田陽菜、フィギア世界選手権代表に初選出!</p>
+      <p>フィギアスケート</p>
+      <p>木下アカデミー・吉田陽菜(準備中)</p>
       </div>
       <div class="news-content">
-      <p>2023.12.23</p>
-      <p>鍵山優真、全日本フィギアで銀メダル!宇野昌磨が優勝!</p>
+      <p>バレーボール</p>
+      <p>JTマーヴェラス・和田由紀子(準備中)</p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
       </button>
         <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
-          <p>2023.12.09</p>
-        <p>鍵山優真、初のグランプリファイナルで銅メダル! 宇野昌磨は銀メダル!</p>
+          <p>フィギアスケート</p>
+        <p>オリエンタルバイオ・鍵山優真</p>
         </div>
       </div>
-    <div class="collapse" id="collapseExample">
-        <div class="card card-body news-content">
-          <p>2023.12.09</p>
-        <p>吉田陽菜、初のグランプリファイナルで銅メダル!坂本花織が優勝!</p>
-        </div>
-      </div>
-      <div class="collapse" id="collapseExample">
-        <div class="card card-body news-content">
-          <p>2023.12.02</p>
-        <p>JTマーヴェラス、年内最後のVリーグ戦も勝利し開幕11連勝!</p>
-        </div>
-      </div>
-      <div class="collapse" id="collapseExample">
-      <div class="card card-body news-content">
-        <p>2023.11.25</p>
-      <p>阪神・石井大智が、チームのフレッシュ大賞に選出! 今季は1軍44試合登板、1勝1敗、19ホールド。その他、小野寺、桐敷ら、計3選手選出!</p>
-      </div>
-    </div>
     </section>
     <!-- footer -->
           <div id="hdr_footer"></div>
