--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
       <h2>アスリート</h2>
       <div class="news-content">
       <p>プロ野球</p>
-      <p>阪神タイガース・石井大智</p>
+      <p><a href="ishiidaichi.html">阪神タイガース・石井大智</a></p>
       </div>
       <div class="news-content">
       <p>フィギアスケート</p>
-      <p>木下アカデミー・吉田陽菜(準備中)</p>
+      <p><a>木下アカデミー・吉田陽菜(準備中)</a></p>
       </div>
       <div class="news-content">
       <p>バレーボール</p>
-      <p>JTマーヴェラス・和田由紀子(準備中)</p>
+      <p><a>JTマーヴェラス・和田由紀子(準備中)</a></p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
@@ -64,7 +64,7 @@
         <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
           <p>フィギアスケート</p>
-        <p>オリエンタルバイオ・鍵山優真</p>
+        <p><a>オリエンタルバイオ・鍵山優真(準備中)</a></p>
         </div>
       </div>
     </section>
