--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <p><a href="ishiidaichi.html">阪神タイガース・石井大智</a></p>
       </div>
       <div class="news-content">
-      <p>フィギアスケート</p>
-      <p><a>木下アカデミー・吉田陽菜(準備中)</a></p>
+      <p>バレーボール</p>
+      <p><a href="wadayukiko.html">JTマーヴェラス・和田由紀子</a></p>
       </div>
       <div class="news-content">
-      <p>バレーボール</p>
-      <p><a>JTマーヴェラス・和田由紀子(準備中)</a></p>
+      <p>フィギアスケート</p>
+      <p><a>オリエンタルバイオ・鍵山優真(準備中)</a></p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
@@ -64,7 +64,7 @@
         <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
           <p>フィギアスケート</p>
-        <p><a>オリエンタルバイオ・鍵山優真(準備中)</a></p>
+        <p><a>木下アカデミー・吉田陽菜(準備中)</a></p>
         </div>
       </div>
     </section>
