--- a/ishiidaichi.html
+++ b/ishiidaichi.html
@@ -31,9 +31,9 @@
         <h3>出身</h3>
         <p>秋田県</p>
       </div>
-      <div class="atl-life-content">
-        <h3>投打</h3>
-        <p>右投げ右打ち</p>
+        <div class="atl-life-content">
+      <h3>ポジション</h3>
+      <p>投手(リリーフ)</p>
       </div>
       <div class="atl-life-content">
         <h3>通算年</h3>
