--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -19,7 +19,7 @@
     <div class="animate__animated animate__fadeIn">
     <h2>JTマーヴェラス・和田由紀子</h2>
     <div class="atl-img">
-      <img src="event-images/athlete/wadayukiko.jpg" alt="JT・和田由紀子">
+      <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/athlete/wadayukiko.jpg?raw=true" alt="JT・和田由紀子">
     </div>
     <div class="atl-life">
       <div class="atl-life-content">
