--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -36,7 +36,7 @@
       </div>
       <div class="atl-life-content">
         <h3>経歴</h3>
-        <p>京都橘-JTマーヴェラス</p>
+        <p>京都橘高-JTマーヴェラス</p>
       </div>
       <div class="atl-life-content-end">
         <p>2017年京都橘高校に入学。1年時から春高バレーに出場、2年からはスタメンでの起用も増えた。高校3年時の4月には、U18日本代表にも選出された。2020年、JTマーヴェラスに入団。入団後は、高い得点力と強烈なサーブでチームに貢献。2023年9月の五輪予選・日本代表にも選ばれ、最速・時速95キロ(日本女子バレー最速)にもなるサーブで会場を沸かせた。
