--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -34,6 +34,10 @@
         <h3>ポジション</h3>
         <p>アウトサイドヒッター</p>
       </div>
+         <div class="atl-life-content">
+        <h3>通算</h3>
+        <p>4年</p>
+      </div>
       <div class="atl-life-content">
         <h3>経歴</h3>
         <p>京都橘高-JTマーヴェラス</p>
