--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -35,8 +35,8 @@
         <p>アウトサイドヒッター</p>
       </div>
          <div class="atl-life-content">
-        <h3>通算</h3>
-        <p>4年</p>
+        <h3>通算年</h3>
+        <p>4年(2020年2月入団)</p>
       </div>
       <div class="atl-life-content">
         <h3>経歴</h3>
