--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -36,7 +36,7 @@
       </div>
          <div class="atl-life-content">
         <h3>通算年</h3>
-        <p>4年(2020年2月入団)</p>
+        <p>4年(2020年入団)</p>
       </div>
       <div class="atl-life-content">
         <h3>経歴</h3>
