--- a/ishiidaichi.html
+++ b/ishiidaichi.html
@@ -44,7 +44,7 @@
         <p>秋田高専-四国ILplus・高知-阪神</p>
       </div>
       <div class="atl-life-content-end">
-        <p>2017年、四国IL高知に入団。入団時の最速は137キロだったが、そこから3年でパワーアップし、2020年には最速153キロになった。2020年ドラフトで、阪神から支配下全体で最後の指名を受けて入団。1年目・2年目と得意なシンカーとキレのあるストレートを使い、リリーフとして2年連続1軍18登板。2年目には、防御率0.75と高成績を残すも勝ち・ホールドがつかず、プラスの記録が残らなかった。
+        <p>小学校3年の時、地元のスポーツ少年団で野球を始める。2017年、四国IL高知に入団。入団時の最速は137キロだったが、そこから3年でパワーアップし、2020年には最速153キロになった。2020年ドラフトで、阪神から支配下全体で最後の指名を受けて入団。1年目・2年目と得意なシンカーとキレのあるストレートを使い、リリーフとして2年連続1軍18登板。2年目には、防御率0.75と高成績を残すも勝ち・ホールドがつかず、プラスの記録が残らなかった。
           プロ未勝利のまま挑んだ昨季、4月12日の対ヤクルト戦でプロ初勝利をあげると、その後も登板を積み重ねリリーフとして44試合登板。19ホールドをあげた。また、大の筋トレ好きで知られる石井は、同じ阪神の片山雄哉や、佐藤蓮らとチーム筋肉を結成。鍛え上げた筋肉を生かし、
           チームのリリーフの1角としてさらなる活躍が期待される。
         </p>
