--- a/wadayukiko.html
+++ b/wadayukiko.html
@@ -43,7 +43,7 @@
         <p>京都橘高-JTマーヴェラス</p>
       </div>
       <div class="atl-life-content-end">
-        <p>2017年京都橘高校に入学。1年時から春高バレーに出場、2年からはスタメンでの起用も増えた。高校3年時の4月には、U18日本代表にも選出された。2020年、JTマーヴェラスに入団。入団後は、高い得点力と強烈なサーブでチームに貢献。2023年9月の五輪予選・日本代表にも選ばれ、最速・時速95キロ(日本女子バレー最速)にもなるサーブで会場を沸かせた。
+        <p>小学校4年の時、いとこに誘われバレーボールを始める。2017年京都橘高校に入学。1年時から春高バレーに出場、2年からはスタメンでの起用も増えた。高校3年時の4月には、U18日本代表にも選出された。2020年、JTマーヴェラスに入団。入団後は、高い得点力と強烈なサーブでチームに貢献。2023年9月の五輪予選・日本代表にも選ばれ、最速・時速95キロ(日本女子バレー最速)にもなるサーブで会場を沸かせた。
           日本のパリ五輪出場権獲得へ、さらなる活躍が期待される。
 
         </p>
