--- a/kagiyamayuma.html
+++ b/kagiyamayuma.html
@@ -19,7 +19,7 @@
     <div class="animate__animated animate__fadeIn">
     <h2>鍵山優真</h2>
     <div class="atl-img">
-      <img src="event-images/athlete/kagiyamayuma.jpg" alt="鍵山優真">
+      <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/athlete/kagiyamayuma.jpg?raw=true" alt="鍵山優真">
     </div>
     <p>画像参照: https://www.fgsk8.com</p>
     <div class="atl-life">
