--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="news-content">
       <p>フィギアスケート</p>
-      <p><a>オリエンタルバイオ・鍵山優真(準備中)</a></p>
+      <p><a href="kagiyamayuma.html">オリエンタルバイオ・鍵山優真</a></p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
