--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="news-content">
       <p>フィギアスケート</p>
-      <p><a href="kagiyamayuma.html">オリエンタルバイオ・鍵山優真</a></p>
+      <p><a href="kagiyamayuma.html">鍵山優真</a></p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
@@ -64,7 +64,7 @@
         <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
           <p>フィギアスケート</p>
-        <p><a>木下アカデミー・吉田陽菜(準備中)</a></p>
+        <p><a>吉田陽菜(準備中)</a></p>
         </div>
       </div>
     </section>
