--- a/yoshidahana.html
+++ b/yoshidahana.html
@@ -19,7 +19,7 @@
     <div class="animate__animated animate__fadeIn">
     <h2>吉田陽菜</h2>
     <div class="atl-img">
-      <img src="event-images/athlete/yoshidahana.jpg" alt="吉田陽菜">
+      <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/athlete/yoshidahana.jpg?raw=true" alt="吉田陽菜">
     </div>
     <p>画像参照: https://www.fgsk8.com</p>
     <div class="atl-life">
