--- a/yoshidahana.html
+++ b/yoshidahana.html
@@ -85,7 +85,7 @@
 </main>
     <!-- footer -->
           <div id="hdr_footer"></div>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/touitu.js"></script>
 </body>
 </html>
