--- a/index.html
+++ b/index.html
@@ -45,26 +45,26 @@
     </section>
     <!-- spo-news -->
     <section id="spo-news">
-      <h2>アスリート</h2>
+      <h2>アスリート情報</h2>
       <div class="news-content">
-      <p>プロ野球</p>
-      <p><a href="ishiidaichi.html">阪神タイガース・石井大智</a></p>
-      </div>
-      <div class="news-content">
-      <p>バレーボール</p>
-      <p><a href="wadayukiko.html">JTマーヴェラス・和田由紀子</a></p>
+      <p>フィギアスケート</p>
+      <p><a href="yoshidahana.html">吉田陽菜</a></p>
       </div>
       <div class="news-content">
       <p>フィギアスケート</p>
       <p><a href="kagiyamayuma.html">鍵山優真</a></p>
+      </div>
+      <div class="news-content">
+      <p>プロ野球</p>
+      <p><a href="ishiidaichi.html">阪神タイガース・石井大智</a></p>
       </div>
       <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         もっと表示
       </button>
         <div class="collapse" id="collapseExample">
         <div class="card card-body news-content">
-          <p>フィギアスケート</p>
-        <p><a>吉田陽菜(準備中)</a></p>
+          <p>バレーボール</p>
+        <p><a href="wadayukiko.html">JTマーヴェラス・和田由紀子</a></p>
         </div>
       </div>
     </section>
