--- a/yoshidahana.html
+++ b/yoshidahana.html
@@ -40,7 +40,7 @@
         <p>中京大中京高</p>
       </div>
       <div class="atl-life-content-end">
-      <p>2007年、2011世界選手権女王の安藤美姫らを輩出した、 名東FSCでフィギアスケートを始める。12歳の時にげんさんサマーカップで、トリプルアクセルを決め話題となった。中学2年だった2019年には、邦和杯でトリプルアクセルに成功し3位。全日本選手権にも初出場してショート21位でフリーに進出、総合19位という結果だった。中学3年時に木下アカデミーに所属を移し、愛知の名古屋市立猪高中学校から京都の宇治市立宇治中学校に転校。高校は、スケートをやっていた3つ上の姉・莉菜さんと同じ愛知・中京大中京高校に進学。 2022年には、全日本で総合6位に入り四大陸選手権の代表に選ばれる。2023年は、シニアクラスに以降。四大陸選手権は8位に終わるも、11月のグランプリシリーズ中国杯で優勝。初のグランプリファイナルでも3位に入り、2024年開催の世界選手権の代表に選ばれた。
+      <p>2007年、2011世界選手権女王の安藤美姫らを輩出した、 名東FSCでフィギアスケートを始める。12歳の時にげんさんサマーカップで、トリプルアクセルを決め話題となった。中学2年だった2019年には、邦和杯でトリプルアクセルに成功し3位。全日本選手権にも初出場してショート21位でフリーに進出、総合19位という結果だった。中学3年時に木下アカデミーに所属を移し、愛知の名古屋市立猪高中学校から京都の宇治市立宇治中学校に転校。高校は、スケートをやっていた3つ上の姉・莉菜さんと同じ愛知・中京大中京高校に進学。 2022年には、全日本で総合6位に入り四大陸選手権の代表に選ばれる。2023年は、シニアクラスに以降。11月のグランプリシリーズ中国杯で優勝。初のグランプリファイナルでも3位に入り、2024年開催の世界選手権の代表に選ばれた。
         次のミラノ五輪代表の候補でもあり、さらなる活躍が期待される。
       </p>
       </div>
@@ -50,7 +50,6 @@
       <h3>2023~24</h3>
       <p>グランプリシリーズ・中国杯: 優勝<br>
         グランプリファイナル: 3位<br>
-        四大陸選手権: 8位<br>
         全日本選手権: 7位
       </p>
      </div>
