--- a/kagiyamayuma.html
+++ b/kagiyamayuma.html
@@ -48,7 +48,8 @@
     <div class="atl-score">
       <div class="atl-score-content">
       <h3>2023~24</h3>
-      <p>ロンバルディア杯: 優勝<br>
+      <p>日本学生氷上競技選手権: 優勝<br>
+        ロンバルディア杯: 優勝<br>
         グランプリシリーズ、フランス大会: 3位<br>
         NHK杯: 優勝<br>
         グランプリファイナル: 3位<br>
