--- a/yoshidahana.html
+++ b/yoshidahana.html
@@ -21,7 +21,7 @@
     <div class="atl-img">
       <img src="https://github.com/heytroys/yotarosports/blob/main/event-images/athlete/yoshidahana.jpg?raw=true" alt="吉田陽菜">
     </div>
-    <p>画像参照: https://www.fgsk8.com</p>
+    <p>画像参照: https://www.sponichi.co.jp</p>
     <div class="atl-life">
       <div class="atl-life-content">
       <h3>生年月日</h3>
